# lmnc_longgames

./: .gitmodules  LICENSE  README.md  build.sh  install.sh  pyproject.toml  requirements.txt
configs/: opensauce.json
install_files/: 60-serial.rules  longpong.service  rebind.sh  start.sh
lmnc_longgames/: config.py  constants.py  fire_demo_game.py  fire_game.py  life_demo_game.py  longpong.py  matrix_demo_game.py  multi_fire.py  multi_life.py  multi_matrix.py  multiverse.py  multiverse_game.py  rotary_encoder_controller.py  screen_power_reset.py  setup_config.py
lmnc_longgames/demos/: audio_viz.py  fire_demo.py  life_demo.py  marquee_demo.py  matrix_demo.py  video_demo.py
lmnc_longgames/games/: breakout.py  combat.py  cydoom.py  invaders.py  longpong.py  snake.py
lmnc_longgames/multiverse/: __init__.py  multiverse.py  multiverse_game.py
lmnc_longgames/simulations/: fire.py  life.py  marquee.py  matrix.py
lmnc_longgames/sound/: microphone.py  midi_player.py  spectrum.py  waveform.py
lmnc_longgames/util/: exit_game.py  music.py  rotary_encoder_controller.py  screen_power_reset.py  setup_config.py  song.py
lmnc_longgames/video/: video_player.py
lmnc_longpong/: longpong.py  main.py  multi_fire.py  multi_matrix.py
scripts/: fire.sh  game.sh  game_headless.sh  install.sh  life.sh  longpong.sh  longpong_headless.sh  matrix.sh  reset.sh  setup_config.sh
