[tool.poetry]
name = "lmnc-longgames"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lmnc_longgames"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pygame = "^2.4.0"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
