[tool.poetry]
name = "lmnc-longgames"
version = "0.1.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lmnc_longgames"}]
include = [
    "README.md",
    "requirements.txt",
    {path = "install_files", format = "sdist"},
    {path = "scripts", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.19.5"
pygame = "1.9.6"
pyserial = "^3.5"
gpiozero = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
