[tool.poetry]
name = "lmnc-longgames"
version = "0.1.8"
description = ""
authors = ["Chris Riggs <christopher.riggs@gmail.com>"]
readme = "README.md"
packages = [{include = "lmnc_longgames"}]
include = [
    "README.md",
    "requirements.txt",
    {path = "install_files", format = "sdist"},
    {path = "scripts", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.19.5"
pygame = "^2.4.0"
pyserial = "^3.5"
gpiozero = "^1.6.2"
av = "^10.0.0"
imageio = "^2.31.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
